# ns-status

./: .gitignore  AGENTS.md  README.md  pyproject.toml  routes.json
ns_status/: __init__.py  __main__.py  client.py  collector.py  config.py  models.py  reporting.py  storage.py  web.py
static/: styles.css
templates/: base.html  day_detail.html  index.html  route_detail.html
tests/: test_collector.py
