[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ns-status"
version = "0.1.0"
description = "Collect route-level NS delay snapshots into SQLite."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116,<1.0",
    "jinja2>=3.1,<4.0",
    "uvicorn>=0.35,<1.0",
]

[tool.unittest]
start-dir = "tests"

[tool.setuptools]
packages = ["ns_status"]
